--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,8 @@
 applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
-    random-route: true
+    routes:
+    - route: https://pal-tracker-optimistic-springhare.cfapps.io
     env:
-      WELCOME_MESSAGE: Hello from Cloud Foundry
+      WELCOME_MESSAGE: Hello Mahi...Pipeline is done in travis.
       JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 1.8.0_+ } }'
