--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 }
 
 bootRun.environment([
-        "WELCOME_MESSAGE": "hello mahi",
+        "WELCOME_MESSAGE": "hello",
 ])
 
 test.environment([
